--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "styled-reset": "^4.3.4"
   },
   "devDependencies": {
+    "@types/d3": "^7.1.0",
     "@types/node": "^14.14.31",
     "@types/react": "^16.9.49",
     "@types/styled-components": "^5.1.15",
