--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/d3": "^7.1.0",
     "@types/node": "^14.14.31",
+    "@types/plotly.js": "^1.54.16",
     "@types/react": "^16.9.49",
     "@types/styled-components": "^5.1.15",
     "babel-eslint": "^10.1.0",
