--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.1.0",
     "@mui/styled-engine-sc": "^5.1.0",
     "@mui/styles": "^5.1.0",
+    "@mui/x-data-grid": "^5.0.0-beta.7",
     "@svgr/webpack": "^5.5.0",
     "d3": "^7.1.1",
     "electron-serve": "^1.1.0",
@@ -24,7 +25,8 @@
     "plotly.js": "^2.6.2",
     "react-plotly.js": "^2.5.1",
     "styled-components": "^5.3.3",
-    "styled-reset": "^4.3.4"
+    "styled-reset": "^4.3.4",
+    "xlsx": "^0.17.3"
   },
   "devDependencies": {
     "@types/d3": "^7.1.0",
